--- a/templates/token_expired2.html
+++ b/templates/token_expired2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
 </head>
 <body>
     
@@ -32,6 +33,13 @@
               >
               <img src="static/404.svg" alt="" className="w-100 px-9" />
                 <div className="404-texts pt-14">
+                  
+                  <lord-icon
+                      src="https://cdn.lordicon.com/huwchbks.json"
+                      trigger="loop"
+                      colors="primary:#121331,secondary:#08a88a"
+                      style="width:250px;height:250px">
+                  </lord-icon>
                   <h3 className="card-title font-size-9 font-weight-bold">
                     Page is not found!
                   </h3>
